# hydroxyl

./: Cargo.toml
src/: lib.rs
src/app/: action.rs  bootstrap.rs  commands.rs  context.rs  document.rs  event.rs  message.rs  mod.rs  router.rs  state.rs  tab.rs  tab_id.rs
src/cli/: args.rs  mod.rs  targets.rs  validate.rs
src/domain/: mod.rs
src/domain/files/: detect.rs  kind.rs  mod.rs  naming.rs  source.rs
src/domain/minecraft/: abilities.rs  advancements.rs  attributes.rs  inventory.rs  item.rs  mod.rs  player.rs  position.rs  profile.rs  server.rs  stats.rs
src/domain/nbt/: convert.rs  edit.rs  mod.rs  parse.rs  path.rs  validate.rs  value.rs
src/persistence/: backup.rs  dirty.rs  json_codec.rs  mod.rs  nbt_codec.rs
src/services/: advancements_service.rs  backup_service.rs  cache_service.rs  document_service.rs  mod.rs  mojang_api.rs  nbt_service.rs  player_service.rs  save_service.rs  skin_service.rs  stats_service.rs  workspace_service.rs
src/tui/: focus.rs  frame.rs  keymap.rs  layout.rs  mod.rs  run.rs  terminal.rs  theme.rs
src/tui/components/: avatar_panel.rs  command_bar.rs  confirm_modal.rs  error_modal.rs  file_tree.rs  footer_help.rs  inventory_grid.rs  item_details.rs  loading_indicator.rs  mod.rs  nbt_tree.rs  position_panel.rs  property_list.rs  section_list.rs  stats_panel.rs  status_bar.rs  tabs.rs  text_input.rs
src/tui/screens/: advancements.rs  home.rs  mod.rs  nbt.rs  player.rs  stats.rs
src/util/: error.rs  fs.rs  mod.rs  result.rs  time.rs
tests/: file_detection.rs  nbt_roundtrip.rs  player_projection.rs
