[package]
name = "hydroxyl"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
fast_nbt = { package = "fastnbt", version = "2.6.1" }
flate2 = "1.1"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
